admission/ValidatingAdmissionPolicy/policies/seccomp-profile-restricted/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seccomp-profile-restricted-initcontainers
  annotations:
    kubeapt.io/uuid: "e936441f-96f4-4bfa-a70a-97b1ca8b369d"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
